--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -25,7 +25,7 @@
   </div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(202 206 235);">
     <div class="container-fluid">
-      <a class="navbar-brand" id="navbar" href="#"><b>Dope-Dealer</b></a>
+      <a class="navbar-brand disabled" id="navbar" ><b>Dope-Dealer</b></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
