--- a/store/templates/store/categories.html
+++ b/store/templates/store/categories.html
@@ -6,51 +6,35 @@
       class="carousel slide"
       data-bs-ride="carousel"
     >
-      <div class="carousel-indicators">
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="0"
-          class="active"
-          aria-current="true"
-          aria-label="Slide 1"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="1"
-          aria-label="Slide 2"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide-to="2"
-          aria-label="Slide 3"
-        ></button>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          {% for carousel in carousels_data %}
+          <div class="carousel-item {% if forloop.first %}active{% endif %}">
+            <img src="{{ carousel.img.url }}" class="d-block w-100" alt="..." />
+          </div>
+          {% endfor %}
+        </div>
+
+        <a
+          class="carousel-control-prev"
+          href="#myCarousel"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only"></span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#myCarousel"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only"></span>
+        </a>
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            src="https://www-whattowearonvacation-com.exactdn.com/wp-content/uploads/2019/09/Mens-fashion-tips-for-Italy.jpg?strip=all&lossy=1&resize=1000%2C600&ssl=1"
-            class="d-block w-100"
-            alt="..."
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            src="https://thestrive.co/wp-content/uploads/2017/02/How-to-Build-Your-Confidence-1000x600.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            src="https://www.udiscovermusic.com/wp-content/uploads/2021/09/MicrosoftTeams-image-5-1000x600.jpg"
-            class="d-block w-100"
-            alt="..."
-          />
-        </div>
-      </div>
+
       <button
         class="carousel-control-prev"
         type="button"
@@ -77,20 +61,15 @@
 <div class="shirt-heading" style="padding-left: 10px">
   <h3 class="cas-shirts-heading">{{category_name}} for {{label_name}}</h3>
 </div>
-<br/>
+<br />
 
-
-<div class="container marketing ">
+<div class="container marketing">
   <!-- Three columns of text below the carousel -->
   <div class="row row-cols-2 row-cols-md-4 g-4">
     {% for i in category_data %}
-    <div class="col" >
+    <div class="col">
       <div class="card h-200">
-        <img
-          src={{i.img.url}}
-          class="card-img-top"
-          alt="..."
-        />
+        <img src="{{i.img.url}}" class="card-img-top" alt="..." />
         <div class="card-body">
           <h5 class="card-title">{{i.name}}</h5>
           <p class="card-text">Rs. {{i.price}}</p>
@@ -103,6 +82,6 @@
     {% endfor %}
   </div>
 </div>
-<br/>
+<br />
 
 {% endblock %}
