--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -1,39 +1,44 @@
-{% extends "base.html" %} 
-{% block content %}
-{% load static %}
+{% extends "base.html" %} {% block content %} {% load static %} 
 {% static 'images' as mediaUrl %}
 <div class="cl">
   <div
-    id="carouselExampleFade"
-    class="carousel slide carousel-fade"
+    id="carouselExampleCaptions"
+    class="carousel slide"
     data-bs-ride="carousel"
   >
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img
-          src="https://images.303magazine.com/uploads/2019/07/Men-3-1400x600.jpg"
-          alt="..."
-        />
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        {% for carousel in carousels_data %}
+        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+          <img src="{{ carousel.img.url }}" class="d-block" alt="..." />
+        </div>
+        {% endfor %}
       </div>
-      <div class="carousel-item">
-        <img
-          src="https://images.303magazine.com/uploads/2021/04/Spring-Selects-EDIT_Kori_Hazel_303_Magazine-13-1400x600.jpg"
-          alt="..."
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          src="https://www.arkhomesffa.org/wp-content/uploads/2017/06/fosterkidsoptimized-1400x600.jpg"
-          class="d-block w-100"
-          class="d-block w-100"
-          alt="..."
-        />
-      </div>
+
+      <a
+        class="carousel-control-prev"
+        href="#myCarousel"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only"></span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#myCarousel"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only"></span>
+      </a>
     </div>
+
     <button
       class="carousel-control-prev"
       type="button"
-      data-bs-target="#carouselExampleFade"
+      data-bs-target="#carouselExampleCaptions"
       data-bs-slide="prev"
     >
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -42,7 +47,7 @@
     <button
       class="carousel-control-next"
       type="button"
-      data-bs-target="#carouselExampleFade"
+      data-bs-target="#carouselExampleCaptions"
       data-bs-slide="next"
     >
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -51,7 +56,7 @@
   </div>
 </div>
 <br /><br />
-<div class="container marketing ">
+<div class="container marketing">
   <!-- Three columns of text below the carousel -->
   <div class="row row-cols-2 row-cols-md-4 g-4">
     {% for dest in dests %}
@@ -66,17 +71,16 @@
         />
         <div class="card-body">
           <h5 class="card-title">{{dest.name}}</h5>
-          <p class="card-text">
-            {{dest.desc}}
-          </p>
+          <p class="card-text">{{dest.desc}}</p>
         </div>
         <div class="card-footer">
-          <small class="text-muted">Hurry Up!! only {{dest.stock}} are left.</small>
+          <small class="text-muted"
+            >Hurry Up!! only {{dest.stock}} are left.</small
+          >
         </div>
       </div>
     </div>
     {% endfor %}
-    
   </div>
 
   <hr class="featurette-divider" />
